k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-5
  labels:
    app: sample-5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-5
  template:
    metadata:
      labels:
        app: sample-5
    spec:
      containers:
        - name: sample-5
          image: starter-service/sample-5:latest
          ports:
            - containerPort: 8080
